[package]
name = "pugit"
version = "0.1.0"
edition = "2024"
description = "The Pude's choice for better git tui"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ipude/pugit"
keywords = ["cli", "tui", "git", "gh", "pugit"]
categories = ["command-line-utilities"]

default-run = "pugit"

[dependencies]
ratatui = "0.30.2"
clap = {version = "4.6.1", features=["derive"]}
crossterm = "0.29.0"
textwrap = "0.16.2"
shellexpand = "3.1.2"
git2 = "0.21.0"
anyhow = "1.0.103"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
strum = "0.28.0"
